--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
           </div>
           <ul id="links" class="links">
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
             <li><a href="#offer">Our Offer</a></li>
             <li><a href="#gallery">Gallery</a></li>
             <li><a href="#blog">Blog</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
           </ul>
           <div id="bars" class="bars">
             <span></span>
@@ -52,9 +52,9 @@
               <a href="#" class="btn-one">Learn More</a>
               <a href="#" class="btn-two">Contact Us</a>
             </div>
-            <p class="go-down">
+            <a href="#offer" class="go-down">
               <span></span>
-            </p>
+            </a>
           </div>
         </div>
         <div class="fixed-box">
